--- a/.github/workflows/token-update.yml
+++ b/.github/workflows/token-update.yml
@@ -8,7 +8,7 @@ jobs:
   update-token:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    secrets: inherit
+    environment: tokensEnv
 
     steps:
       - name: Checkout repository
