Update GitHub Actions workflow to use npx for running TypeScript file

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,6 +22,6 @@ jobs:
       run: npm install
 
     - name: Run TypeScript file
-      run: ts-node request.ts
+      run: npx ts-node request.ts
       env:
         API_TOKEN: ${{ secrets.API_TOKEN }}
