--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,9 +19,13 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
-      run: npm install
-
-    - name: Run TypeScript file
-      run: npx ts-node request.ts
-      env:
+    run: |
+        npm install
+        tsc request.ts
+        
+    - name: Run TypeScript files
+    env:
         API_TOKEN: ${{ secrets.API_TOKEN }}
+        REPOSITORY: ${{ secrets.REPOSITORY }}
+        TOKEN: ${{ secrets.TOKEN }}
+    run: node request.js
